# CSC196GameEngine

./: .clangd  meson.build
source/engine/: meson.build
source/engine/include/: engine.h
source/engine/include/audio/: audio.h  core.h
source/engine/include/core/: math.h  time.h
source/engine/include/env/: actor.h  enemy.h  firereset.h  game.h  player.h  rocket.h  scene.h  scene_impl.h
source/engine/include/exceptions/: io.h
source/engine/include/input/: core.h  inputsystem.h
source/engine/include/io/: core.h
source/engine/include/math/: math.h  time.h  vector.h
source/engine/include/math/colors/: color4.h
source/engine/include/math/core/: core.h  random.h
source/engine/include/math/vectors/: transform.h  vector2.h  vector3.h
source/engine/include/render/: cpurender.h  renderer.h
source/engine/include/renderer/: core.h  core.hpp  font.h  model.h  particles.h  text.h
source/engine/include/time/: time.h
source/engine/src/: engine.cpp  render.cu
source/engine/src/audio/: audio.cpp  core.cpp
source/engine/src/env/: actor.cpp  enemy.cpp  firereset.cpp  player.cpp  rocket.cpp  scene.cpp
source/engine/src/input/: core.cpp  inputsystem.cpp
source/engine/src/io/: core.cpp
source/engine/src/render/: cpurender.cpp  gpurender.cu  renderer.cpp
source/engine/src/renderer/: core.cpp  font.cpp  model.cpp  text.cpp
source/game/: copy.py  inputSound.h  inputSystemPaint.h  main.cpp  meson.build  model.h  shapedrawer.h
source/game/Demos/: iodemo.h  modeldemo.h  randomdemo.h  shapedrawer.h  textdisplay.h
source/game/FinishedGames/: spacegame.h  spacegame.hpp
